--- a/src/pages/app/app.css
+++ b/src/pages/app/app.css
@@ -63,7 +63,7 @@ body {
 		text {
 			fill: black;
 			font-size: var(--letter-size);
-			font-weight: bold;
+			font-weight: 500;
 		}
 	}
 	&.letter-1 {
@@ -165,4 +165,116 @@ body {
 	&.centre {
 		color: var(--centre-color);
 	}
+}
+
+.found {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+	border: 1px solid;
+	gap: 1em;
+	padding: 1em;
+}
+
+.found li {
+	display: flex;
+}
+
+.found-word {
+	padding: 0 8px;
+	font-weight: 500;
+}
+
+.found-score {
+	font-size: 0.75em;
+	background: var(--blue);
+	color: white;
+	padding: 4px 8px;
+	border-radius: 16px;
+}
+
+.found-pangram-marker {
+	opacity: 0;
+	&.show {
+		opacity: 1;
+	}
+}
+
+.progress {
+	display: flex;
+	place-content: center;
+	place-items: center;
+	gap: 1em;
+	.rank {
+		width: 14ch;
+		height: 4ch;
+		display: flex;
+		place-content: center;
+		place-items: center;
+		background: var(--carribean-current);
+		color: white;
+		padding: 4px;
+		font-size: 14px;
+		font-weight: 600;
+	}
+	.bar {
+		position: relative;
+		width: 100%;
+	}
+	.line {
+		height: 2px;
+		background: var(--carribean-current);
+	}
+	.dots {
+		display: flex;
+		place-items: space-between;
+		place-content: space-between;
+	}
+	.dot {
+		width: 8px;
+		height: 8px;
+		border-radius: 50%;
+		background: var(--carribean-current);
+		translate: 0 -3px;
+
+		.info {
+			background: white;
+			border: 2px solid var(--carribean-current);
+			color: var(--carribean-current);
+			box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+			padding: 4px 8px;
+			font-size: 14px;
+			white-space: nowrap;
+			display: none;
+			position: relative;
+			top: -2em;
+			left: -50%;
+			translate: -50% -50%;
+		}
+		&:hover .info,
+		&:focus .info {
+			display: inline;
+			white-space: nowrap;
+		}
+	}
+	.marker {
+		width: 28px;
+		height: 28px;
+		text-align: center;
+		position: absolute;
+		background: white;
+		padding: 0.5em;
+		font-size: 12px;
+		border-radius: 24px;
+		display: flex;
+		place-content: center;
+		place-items: center;
+		top: 0;
+		translate: -50% -50%;
+		font-weight: bold;
+		border: 2px solid var(--carribean-current);
+		color: var(--carribean-current);
+		transition: all 0.3s ease-in-out;
+	}
+	padding-bottom: 2em;
 }
