--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,3 +9,26 @@ body {
 code {
 	font-family: Iosevka, Monaco, Consolas, "Courier New", monospace;
 }
+
+body {
+	font-size: 18px;
+
+	--remote-color: var(--carribean-current);
+	--local-color: var(--blue-crayola);
+	--centre-color: var(--sunglow);
+	--letter-box-size: 80px;
+	--letter-size: 40px;
+	display: flex;
+	flex-direction: column;
+	place-content: center;
+	place-items: center;
+	text-align: center;
+}
+
+* {
+	/* disable bouncing */
+	overscroll-behavior: none;
+	scrollbar-color: var(--scrollbar-bg) var(--scrollbar-fg);
+	/* disable tappy zoom */
+	touch-action: manipulation;
+}
