--- a/src/pages/play/play.css
+++ b/src/pages/play/play.css
@@ -25,7 +25,10 @@
 	svg {
 		height: var(--letter-box-size);
 		width: var(--letter-box-size);
-		touch-action: manipulation !important;
+		touch-action: none;
+		* {
+			touch-action: none;
+		}
 		user-select: none;
 		polygon {
 			fill: white;
@@ -53,7 +56,7 @@
 			fill: black;
 			font-size: var(--letter-size);
 			font-weight: 500;
-			touch-action: manipulation !important;
+			touch-action: none;
 			user-select: none;
 		}
 	}
