--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,7 @@ body {
 	touch-action: manipulation;
 	user-select: none;
 	-webkit-user-select: none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 a {
