--- a/src/pages/games/games.css
+++ b/src/pages/games/games.css
@@ -19,7 +19,7 @@
 	}
 }
 
-article {
+.game-card {
 	padding-bottom: 4em;
 	border-bottom: 1px solid;
 	margin-bottom: 4em;
@@ -28,7 +28,7 @@ article {
 	}
 }
 
-h1 {
+.games-title {
 	margin-bottom: 2em;
 }
 
